refactor: rename parsers module to plainjs

--- a/docs/migration-guides/5-to-6.md
+++ b/docs/migration-guides/5-to-6.md
@@ -22,7 +22,7 @@ const {
 should be replaced by
 
 ```js
-const { Parser, StreamParser } = require('@json2csv/parsers');
+const { Parser, StreamParser } = require('@json2csv/plainjs');
 const { Transform, AsyncParser } = require('@json2csv/node');
 const { TransformStream, AsyncParser } = require('@json2csv/whatwg');
 const { flatten, unwind } = require('@json2csv/transforms');
@@ -136,7 +136,7 @@ const csv = json2csvParser.parse(myData);
 should be replaced by
 
 ```js
-import { Parser } from '@json2csv/parsers';
+import { Parser } from '@json2csv/plainjs';
 import { string: stringFormatter } from '@json2csv/formatters';
 const json2csvParser = new Parser({
   formatters: {
