docs: fix import as
In the documentation, some imports were given with the following syntax:
import { x: y } from z
instead of:
import { x as y } from z

This commit uses "as".

https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/import

--- a/docs/migration-guides/5-to-6.md
+++ b/docs/migration-guides/5-to-6.md
@@ -137,7 +137,7 @@ should be replaced by
 
 ```js
 import { Parser } from '@json2csv/plainjs';
-import { string: stringFormatter } from '@json2csv/formatters';
+import { string as stringFormatter } from '@json2csv/formatters';
 const json2csvParser = new Parser({
   formatters: {
     string: stringFormatter({ quote: '\'', escapedQuote: '\\\'' })),
