docs: add missing @ in formatters readme & migration guide

--- a/docs/migration-guides/5-to-6.md
+++ b/docs/migration-guides/5-to-6.md
@@ -161,8 +161,8 @@ const csv = json2csvParser.parse(myData);
 should be replaced by
 
 ```js
-const { stringExcel: stringExcelFormatter } = require('json2csv/formatters');
-const Parser = require('json2csv/Parser');
+const { stringExcel: stringExcelFormatter } = require('@json2csv/formatters');
+const { Parser } = require('@json2csv/plainjs');
 const json2csvParser = new Parser({
   formatters: {
     string: stringExcelFormatter,
