chore(docs): improve migration guide to reflect correct constructor

--- a/docs/migration-guides/5-to-6.md
+++ b/docs/migration-guides/5-to-6.md
@@ -33,9 +33,11 @@ const { number: numberFormatter, string: stringFormatter, stringExcel: stringExc
 These 2 methods are equivalent to:
 
 ```js
+const { Parser } = require('@json2csv/plainjs');
 const parse = (data, opts) => new Parser(opts).parse(data);
 
-const parseAsync = (data, opts, transformOpts) => new NodeAsyncParser(opts, transformOpts).parse(data).promise();
+const { AsyncParser } = require('@json2csv/node');
+const parseAsync = (data, opts, transformOpts) => new AsyncParser(opts, transformOpts).parse(data).promise();
 ```
 
 ## AsyncParser changes
